--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".WidgetActivity"></activity>
-        <activity android:name=".EngagementActivity" />
+        <activity android:name=".widget.WidgetActivity"></activity>
+        <activity android:name=".WidgetActivity" />
+        <activity android:name=".chat.ChatActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
