--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.sample">
+    package="com.livelike.engagementsdksample">
 
     <application
+
+        android:name="com.livelike.engagementsdksample.LiveLikeApplication"
+
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".widget.WidgetActivity"></activity>
+        <activity android:name="com.livelike.engagementsdksample.widget.WidgetActivity"></activity>
         <activity android:name=".WidgetActivity" />
-        <activity android:name=".chat.ChatActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name="com.livelike.engagementsdksample.chat.ChatActivity" />
+        <activity android:name="com.livelike.engagementsdksample.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
