added firebase integration

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,16 +5,15 @@
     <application
 
         android:name="com.livelike.engagementsdksample.LiveLikeApplication"
-
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/MyMaterialTheme.Base">
-        <activity android:name="com.livelike.engagementsdksample.widget.WidgetActivity"></activity>
         <activity android:name=".WidgetActivity" />
-        <activity android:name="com.livelike.engagementsdksample.chat.ChatActivity" />
+        <activity android:name="com.livelike.engagementsdksample.chat.ChatActivity"
+            android:configChanges="keyboardHidden|orientation"/>
         <activity android:name="com.livelike.engagementsdksample.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
