--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,15 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.google.firebase:firebase-analytics:17.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta4'
+
+    implementation "androidx.constraintlayout:constraintlayout:2.0.4"
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation "com.jakewharton.threetenabp:threetenabp:1.1.2"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+
     implementation "androidx.cardview:cardview:1.0.0"
     implementation 'com.livelike.android-engagement-sdk:engagementsdk:2.10'
     implementation 'com.livelike.android-engagement-sdk:pluginexoplayer:1.5.1'
