--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ android {
 
 dependencies {
     def lifecycle_version = "2.2.0"
+    def lottieVersion = "3.4.0"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -55,7 +56,7 @@ dependencies {
     implementation "com.jakewharton.threetenabp:threetenabp:1.1.2"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
-    implementation "com.airbnb.android:lottie:3.0.3-support"
+    implementation "com.airbnb.android:lottie:$lottieVersion"
 
     implementation "androidx.cardview:cardview:1.0.0"
     implementation 'com.livelike.android-engagement-sdk:engagementsdk:2.10'
