--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,8 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.android.material:material:1.2.1'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
     def lifecycle_version = "2.2.0"
     def lottieVersion = "3.4.0"
 
@@ -59,8 +61,9 @@ dependencies {
     implementation "com.airbnb.android:lottie:$lottieVersion"
 
     implementation "androidx.cardview:cardview:1.0.0"
-    implementation 'com.livelike.android-engagement-sdk:engagementsdk:2.11.2'
-    implementation 'com.livelike.android-engagement-sdk:pluginexoplayer:2.11.2'
+    implementation project(":mmlengagementsdk")
+    implementation 'com.livelike.android-engagement-sdk:engagementsdk:2.12'
+
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
