--- a/mmlengagementsdk/build.gradle
+++ b/mmlengagementsdk/build.gradle
@@ -10,13 +10,20 @@ buildscript {
         supportLibraryVersion = '28.0.0'
         constraintLayout = '2.0.4'
     }
+
+    dependencies {
+        classpath "com.github.dcendents:android-maven-gradle-plugin:2.1"
+    }
 }
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
 }
+apply plugin: 'com.android.library'
+apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'kotlin-android-extensions'
 
+group = 'com.livelike'
 
 android {
     compileSdkVersion 28
@@ -50,6 +57,7 @@ repositories {
     google()
     jcenter()
     maven { url 'https://jitpack.io' }
+
 }
 
 dependencies {
