--- a/mmlengagementsdk/build.gradle
+++ b/mmlengagementsdk/build.gradle
@@ -67,7 +67,7 @@ dependencies {
 //    implementation files('/Users/shivansh/Documents/ll-projects/android-engagement-sdk/engagementsdk/build/outputs/aar/engagementsdk-production-release.aar')
     testImplementation 'junit:junit:4.+'
     //sdk
-    implementation 'com.livelike.android-engagement-sdk:engagementsdk:2.14.1-alpha0'
+    implementation 'com.livelike.android-engagement-sdk:engagementsdk:2.14.1'
 
     implementation "com.jakewharton.threetenabp:threetenabp:$threetenabpVersion"
     implementation "com.airbnb.android:lottie:$lottieVersion"
