--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,9 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     def lifecycle_version = "2.2.0"
     def lottieVersion = "3.4.0"
 
@@ -59,8 +62,8 @@ dependencies {
     implementation "com.airbnb.android:lottie:$lottieVersion"
 
     implementation "androidx.cardview:cardview:1.0.0"
-    implementation 'com.livelike.android-engagement-sdk:engagementsdk:2.12'
-    implementation 'com.livelike.android-engagement-sdk:pluginexoplayer:2.12'
+    implementation 'com.livelike.android-engagement-sdk:engagementsdk:2.15'
+    implementation 'com.livelike.android-engagement-sdk:pluginexoplayer:2.15'
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
