--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,18 +3,22 @@
     package="com.livelike.engagementsdksample">
 
     <application
-
-        android:name="com.livelike.engagementsdksample.LiveLikeApplication"
+        android:name=".LiveLikeApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/MyMaterialTheme.Base">
-        <activity android:name="com.livelike.engagementsdksample.widget.WidgetActivity" />
-        <activity android:name="com.livelike.engagementsdksample.chat.ChatActivity"
-            android:configChanges="keyboardHidden|orientation"/>
-        <activity android:name="com.livelike.engagementsdksample.MainActivity">
+        <activity
+            android:name=".yinzcam.YinzCamActivity"
+            android:label="@string/title_activity_yinz_cam"
+            android:theme="@style/MyMaterialTheme.Base.NoActionBar"></activity>
+        <activity android:name=".widget.WidgetActivity" />
+        <activity
+            android:name=".chat.ChatActivity"
+            android:configChanges="keyboardHidden|orientation" />
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
