--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,11 @@ android {
 
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -60,11 +65,11 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
     implementation "com.airbnb.android:lottie:$lottieVersion"
-
+    implementation "com.google.code.gson:gson:2.8.6"
     implementation "androidx.cardview:cardview:1.0.0"
 //    implementation 'com.livelike.android-engagement-sdk:engagementsdk:2.16'
 //    implementation files('/Users/livelike/Documents/android-engagement-sdk/engagementsdk/build/outputs/aar/engagementsdk-production-debug.aar')
-    implementation 'com.livelike.android-engagement-sdk:engagementsdk:e74091f0197e0e97c23282763210e2a2aaea945b'
+    implementation 'com.livelike.android-engagement-sdk:engagementsdk:eecadff5ccfdbb56443ff2f138b9d028dee75644'
     implementation 'com.livelike.android-engagement-sdk:pluginexoplayer:2.16'
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     testImplementation 'junit:junit:4.12'
